test-results/end_scope_2.err
[1m/mnt/c/Users/matthew/git/upp/examples/end_scope_2.c:75:5: error: @defer expected 1 arguments, but found 0[0m
    @defer { free(str1); str1 = NULL; }
    [1;31m^[0m
